changed list positioning from 10% to 5% from top

--- a/index.html
+++ b/index.html
@@ -23,19 +23,16 @@
               <a href="#" class="navigation__link">Home</a>
             </li>
             <li class="navigation__item">
-              <a href="#" class="navigation__link">Accomodation</a>
+              <a href="#" class="navigation__link">About</a>
             </li>
             <li class="navigation__item">
-              <a href="#" class="navigation__link"><span>Experiences</a>
-            </li>
-            <li class="navigation__item">
-              <a href="#" class="navigation__link">The Region</a>
+              <a href="#" class="navigation__link"><span>Portfolio</a>
             </li>
             <li class="navigation__item">
               <a href="#" class="navigation__link">Gallery</a>
             </li>
             <li class="navigation__item">
-              <a href="#" class="navigation__link">Blog</a>
+              <a href="#" class="navigation__link">Contact</a>
             </li>
           </ul>
         </nav>
